<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_dialog_sort">


    <TextView
        android:id="@+id/order_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="Порядок по умолчанию"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/switch_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/order_default"
        app:layout_constraintEnd_toStartOf="@id/order_favorite"/>

    <TextView
        android:id="@+id/order_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="Сначала избранные"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/switch_order"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/order_favorite"
        tools:layout_editor_absoluteX="1dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_sorting"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/up_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="spinnerItemStyle"
        android:entries="@array/direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />



    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/up_down" />

    <RadioGroup
        android:id="@+id/radio_group_sorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <RadioButton
            android:id="@+id/radio_name_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/name_company"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/radio_name_company" />

        <RadioButton
            android:id="@+id/radio_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/price"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/radio_change_price" />

        <RadioButton
            android:id="@+id/radio_change_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/change_price"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/radio_change_price" />

        <RadioButton
            android:id="@+id/radio_change_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/change_percent"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <Button
        android:id="@+id/bottom_attach_sorting"
        style="@style/style_bottom_action"
        android:layout_marginTop="8dp"
        android:text="@string/action_dialog"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_sorting" />


</androidx.constraintlayout.widget.ConstraintLayout>